--- a/roles/java/tasks/main.yml
+++ b/roles/java/tasks/main.yml
@@ -17,14 +17,12 @@
 
 - include: set-role-variables.yml
 
-
-
 - name: install libselinux-python binary for Ansible to work
   yum: name=libselinux-python state=present
   when: ansible_pkg_mgr == "yum"
 
 - name: copy scripts to server
-  copy: src="../files/check-java-version.sh"  dest="{{ java_download_path }}/"  mode="a+x"
+  template: src="check-java-version.j2"  dest="{{ java_download_path }}/check-java-version.sh"  mode="a+x"
 
 - name: check if specific version of Oracle JDK is installed?
   shell: LC_ALL="en_US.UTF-8"  {{ java_download_path }}/check-java-version.sh  "{{ jdk_version }}"
@@ -39,4 +37,11 @@
 
 - name: delegate to JCE zip installation process
   include: install_jce.yml
-  when: java_install_jce
+  when: java_install_jce and java_version == 8
+
+- name: Enable Java Unlimited Security for java 9
+  lineinfile:
+    path: '{{ java_home }}/conf/security/java.security'
+    regexp: '^crypto.policy='
+    line: 'crypto.policy=unlimited'
+  when: java_install_jce and java_version == 9
