--- a/roles/java/tasks/set-role-variables.yml
+++ b/roles/java/tasks/set-role-variables.yml
@@ -4,9 +4,15 @@
 #
 
 
-- name: set general internal vars
+- name: Set jdk_version (8)
   set_fact:
     jdk_version: "1.{{ java_version }}.0_{{ java_subversion }}"
+  when: java_version == 8
+
+- name: Set jdk_version (9)
+  set_fact:
+    jdk_version: "9"
+  when: java_version == 9
 
 
 #
@@ -21,106 +27,6 @@
   set_fact:
     jdk_os: linux
   when: ansible_system == 'Linux'
-
-- name: set java OS for Mac OS X
-  set_fact:
-    jdk_os: macosx
-  when: ansible_os_family == 'Darwin'
-
-
-#
-# version-specific variables
-#
-- name: set internal vars for 1.8.0_112
-  set_fact:
-    jdk_version_detail: "{{ java_version }}u{{ java_subversion }}-b15"
-  when: java_version == 8 and java_subversion == 112
-
-- name: set internal vars for 1.8.0_111
-  set_fact:
-    jdk_version_detail: "{{ java_version }}u{{ java_subversion }}-b14"
-  when: java_version == 8 and java_subversion == 111
-
-- name: set internal vars for 1.8.0_102
-  set_fact:
-    jdk_version_detail: "{{ java_version }}u{{ java_subversion }}-b14"
-  when: java_version == 8 and java_subversion == 102
-
-- name: set internal vars for 1.8.0_101
-  set_fact:
-    jdk_version_detail: "{{ java_version }}u{{ java_subversion }}-b13"
-  when: java_version == 8 and java_subversion == 101
-
-- name: set internal vars for 1.8.0_92 or 1.8.0_91
-  set_fact:
-    jdk_version_detail: "{{ java_version }}u{{ java_subversion }}-b14"
-  when: java_version == 8 and (java_subversion == 92 or java_subversion == 91)
-
-- name: set internal vars for 1.8.0_77
-  set_fact:
-    jdk_version_detail: "{{ java_version }}u{{ java_subversion }}-b03"
-  when: java_version == 8 and java_subversion == 77
-
-- name: set internal vars for 1.8.0_74
-  set_fact:
-    jdk_version_detail: "{{ java_version }}u{{ java_subversion }}-b02"
-  when: java_version == 8 and java_subversion == 74
-
-- name: set internal vars for 1.8.0_73
-  set_fact:
-    jdk_version_detail: "{{ java_version }}u{{ java_subversion }}-b02"
-  when: java_version == 8 and java_subversion == 73
-
-- name: set internal vars for 1.8.0_72
-  set_fact:
-    jdk_version_detail: "{{ java_version }}u{{ java_subversion }}-b15"
-  when: java_version == 8 and java_subversion == 72
-
-- name: set internal vars for 1.8.0_66
-  set_fact:
-    jdk_version_detail: "{{ java_version }}u{{ java_subversion }}-b17"
-  when: java_version == 8 and java_subversion == 66
-
-- name: set internal vars for 1.8.0_65
-  set_fact:
-    jdk_version_detail: "{{ java_version }}u{{ java_subversion }}-b17"
-  when: java_version == 8 and java_subversion == 65
-
-- name: set internal vars for 1.8.0_60
-  set_fact:
-    jdk_version_detail: "{{ java_version }}u{{ java_subversion }}-b27"
-  when: java_version == 8 and java_subversion == 60
-
-- name: set internal vars for 1.8.0_51
-  set_fact:
-    jdk_version_detail: "{{ java_version }}u{{ java_subversion }}-b16"
-  when: java_version == 8 and java_subversion == 51
-
-- name: set internal vars for 1.8.0_45
-  set_fact:
-    jdk_version_detail: "{{ java_version }}u{{ java_subversion }}-b14"
-  when: java_version == 8 and java_subversion == 45
-
-- name: set internal vars for 1.8.0_31
-  set_fact:
-    jdk_version_detail: "{{ java_version }}u{{ java_subversion }}-b13"
-  when: java_version == 8 and java_subversion == 31
-
-- name: set internal vars for 1.7.0_80
-  set_fact:
-    jdk_version_detail: "{{ java_version }}u{{ java_subversion }}-b15"
-  when: java_version == 7 and java_subversion == 80
-
-- name: set internal vars for 1.7.0_75
-  set_fact:
-    jdk_version_detail: "{{ java_version }}u{{ java_subversion }}-b13"
-  when: java_version == 7 and java_subversion == 75
-
-- name: set internal vars for generic Java version
-  set_fact:
-    jdk_version_detail: "{{ java_version }}u{{ java_subversion }}-b{{ java_build }}"
-  when: jdk_version_detail is not defined and java_build is defined
-
 
 - name: compose filename, if necessary
   set_fact:
@@ -137,12 +43,6 @@
 # JCE variables
 #
 
-- name: set JCE variables for java 7
-  set_fact:
-    jce_zip_file:   "UnlimitedJCEPolicyJDK{{ java_version }}.zip"
-    jce_zip_folder: "UnlimitedJCEPolicy"
-  when: java_version == 7
-
 - name: set JCE variables for java 8
   set_fact:
     jce_zip_file:   "jce_policy-{{ java_version }}.zip"
@@ -152,7 +52,7 @@
 - name: set JCE download file
   set_fact:
     jce_zip_url: "http://download.oracle.com/otn-pub/java/jce/{{ java_version }}/{{ jce_zip_file }}"
-
+  when: java_version == 8
 
 #
 # directories
@@ -164,17 +64,3 @@
     java_default_link_name: default-java
     java_home: /usr/lib/jvm/default-java
   when: ansible_os_family == "Debian"
-
-- name: set java installation directory on Mac OS X
-  set_fact:
-    # The Java installation directory on Mac OS X is determined by the package itself.
-    java_install_dir: /no_such_directory
-    java_default_link_name: default
-  when: ansible_os_family == "Darwin"
-
-- name: set java installation directory on non-Debian platforms
-  set_fact:
-    java_install_dir: /usr/java
-    java_default_link_name: default
-    java_home: /usr/java/default
-  when: ansible_os_family != "Debian" and ansible_os_family != "Darwin"
